2002-04-25  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Obsolete Macros): Typo.
	Reported by Vladimir Volovich.

2002-04-25  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (autoreconf): Don't let aclocal.m4 be older
	than some of the input files, hence, on the second run of aclocal,
	if some of its input are younger, make them older.
	Suggested by Paul Eggert.

2002-04-25  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Usual Tools): sed and `!'.
	Thanks to Paul Eggert.

2002-04-25  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INIT_DEFAULTS): Let ac_subst_files
	and ac_subst_vars be sh variables containing the list of
	AC_SUBST_FILES'ed and AC_SUBST'ed identifiers.  Output them in the
	DEFAULT diversion.
	(_AC_INIT_PREPARE): Use them to log them.
	(_AC_SUBST, _AC_SUBST_SED_PROGRAM): Remove.
	(AC_SUBST, AC_SUBST_FILE): Instead of buliding the
	_AC_SUBST_SED_PROGRAM, store the list of output files/variables in
	_AC_SUBST_FILES and _AC_SUBST_VARS.
	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES): Adjust.

2002-04-24  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (autoreconf): Run automake after autoconf and
	autoheader, so that automake does not complain about a missing
	config.h.in that was to be created.

2002-04-23  Akim Demaille  <akim@epita.fr>

	* bin/autoheader.in (parse_args): --warning takes an argument.
	Fixes PR/220.

2002-04-22  Peter Eisentraut  <peter_e@gmx.net>

	* lib/autoconf/general.m4 (_AC_RUN_IFELSE): Remove gmon.out
	and bb.out when cleaning up.

2002-04-22  Akim Demaille  <akim@epita.fr>

	Version 2.53a.

2002-04-22  Akim Demaille  <akim@epita.fr>

	* tests/m4sh.at (LINENO): Fix the Zsh skip pattern.

2002-04-22  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Pretty Help Strings): Remove a spurious
	comma.
	Reported by Gregory Giannoni.

2002-04-22  Akim Demaille  <akim@epita.fr>

	* tests/m4sh.at (LINENO): Skip the test if LINENO cannot be unset.
	Fixes false failures on Darwin.
